worked on table css

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -2,7 +2,8 @@
 $font: Roboto, arial, Helvetica, sans-serif;
 $font-light: 300;
 $font-reg: 400;
-$primary-type-color: #000;
+$font-bold: 500;
+$primary-type: #000;
 $primary-color: #219ab4;
 $primary-bg-color: #ffffff;
 
@@ -10,6 +11,6 @@ $secondary-color: #005d83;
 
 $accent-color: #f59c36;
 $inverse-type: #ffffff;
-$lighter-bg-color: #dedede;
+$lighter-bg-color: #f0f9ff;
 $sign-in-bg: url('/assets/dental-web3.jpg');
 
