--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,13 @@ header {
   z-index: 1030;
 }
 
-
+footer {
+  background-color: $secondary-color;
+  color: $inverse-type;
+  min-height: 100px;
+  padding:10px;
+  width: 100%;
+}
 h3 {
 	margin-top: 1.5em;
 }
@@ -105,7 +111,8 @@ a, a:link, a:visted {
   }
 }
 .logo-img {
-  width: 100px;
+  padding-right: 15px;
+  width: 250px;
 }
 .logo-text {
   position: absolute;
