--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,9 @@
 
   <body>
     <header>
-      <div class="navbar-header">
+      <div data-role="toolbar" data-position="fixed" class="navbar-header">
         <div class="logo">
-        <a class="logo-link" href="/index"><%= image_tag("adea-logo.png", class: "logo-img") %>
+        <a class="logo-link" href="/index"><%= image_tag("adealogo.png", class: "logo-img") %>
         <span class="logo-text">Official Guide to Dental Schools</span></a>
         </div>
       </div>
