--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,8 +72,8 @@ a, a:link, a:visted {
 .header-nav {
   float: right;
   position: relative;
-  top: -20px;
-  right: 35px;
+  top: -25px;
+  right: 20px;
   z-index: 5 !important;
 }
 
@@ -112,7 +112,7 @@ a, a:link, a:visted {
 }
 .logo-img {
   padding-right: 15px;
-  width: 250px;
+  width: 200px;
 }
 .logo-text {
   position: absolute;
@@ -364,6 +364,20 @@ table td {
   }
 }
 
+// ****************** STATES ******************************
+
+.header-shrink {
+  height: 60px;
+}
+
+.logo-shrink {
+  width: 200px;
+}
+
+.logotext-shrink {
+  display: none;
+}
+
 //////////// DESKTOP /////////
 @media screen and (min-width: 768px) {
    body {
@@ -381,12 +395,19 @@ table td {
   .header-nav {
     top:10px;
   }
+  .logo-img {
+    width: 250px;
+  }
+
   .logo-text {
     position: inherit;
     top: 0px;
     left: 0px;
   }
   
+  .container {
+    min-height: calc(100vh - 170px);
+  }
   .main-img {
     display: none;
   }
