--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -17,7 +17,7 @@
               </a>
               </h2>
               <div class="collapse" id="collapse_<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>">
-                <div class="well">
+                <div class="info-well">
                   <% this_section = f.section_name %>
             <% end %>
             <%= display_fields_and_tables(f) %>
