added footer content and grid

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,7 @@ header {
 footer {
   background-color: $secondary-color;
   color: $inverse-type;
+  font-size: 14px;
   min-height: 100px;
   padding:10px;
   width: 100%;
