--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,19 @@
     </div>
 
     <footer>
-      American Dental Education Association
+      <div class="row">
+        <div class="col-md-4">
+          <p>©2017 American Dental Education Association® (ADEA)<br />
+          655 K Street, NW, Suite 800<br />
+          Washington, DC 20001  <br />
+          202-289-7201</p>
+        </div>
+        <div class="col-md-8">
+          <p>ADEA homepage</p>
+          <p>Terms of use</p>
+          <p>Privacy Policy</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
