fixed info page button headers

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -436,8 +436,9 @@ table td {
     display: none;
   }
 
-  .nodisplay {
-    display: none;
+  .information-page .btn-header {
+    cursor:not-allowed;
+    pointer-events:none;
   }
 }
 
