--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,28 @@
-<div class="page-header"><h1>Register</h1></div>
+<div class="row">
+  <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+    <div class="block block-blue">
+      <h1>Register</h1>
 
-<%= form_for @user do |f| %>
-  <%= render 'shared/errors', object: @user %>
+      <%= form_for @user do |f| %>
+        <%= render 'shared/errors', object: @user %>
 
-  <div class="form-group">
-    <%= f.label :login %>
-    <%= f.text_field :login, class: 'form-control' %>
+        <div class="form-group">
+          <%= f.label :login %>
+          <%= f.text_field :login, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+
+        <%= f.submit 'REGISTER', class: 'btn btn-inverse btn-lg' %>
+      <% end %>
+    </div>
   </div>
-
-  <div class="form-group">
-    <%= f.label :password %>
-    <%= f.password_field :password, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, class: 'form-control' %>
-  </div>
-
-  <%= f.submit 'Register', class: 'btn btn-primary btn-lg' %>
-<% end %>
+</div>
