--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <div data-role="toolbar" data-position="fixed" class="navbar-header">
         <div class="logo">
         <a class="logo-link" href="/index"><%= image_tag("adealogo.png", class: "logo-img") %>
-        <span class="logo-text">Official Guide to Dental Schools</span></a>
+        <span class="logo-text">2017-2018 ADEA Official Guide to Dental Schools</span></a>
         </div>
       </div>
       <div class="header-nav">
