--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -1,4 +1,4 @@
-  <div class="row overlay">
+  <div class="search-page row overlay">
     <div class="col-sm-5 col-md-4 col-lg-3">
     <p>&nbsp;</p>
       <a id="btn-search-filters" class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseAllFilters" aria-expanded="false" aria-controls="collapseAllFilters"><span class="glyphicon glyphicon-menu-down nodisplay"></span> Search Filters</a>
