working on arrows and info page

--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -5,7 +5,7 @@
       <h3><%= label_tag(:q, "Enter one or more keywords") %></h3>
       <%= text_field_tag(:q, nil, class: "form-control") %>
       <h3>Or use the filters below</h3>
-        <div>
+        <div class="index-page">
           <div>
             <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">            
             <span class="glyphicon glyphicon-menu-down"></span> Type of Institution</a>
