resolved arrows issues

--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -78,6 +78,7 @@
 
 
       <% end %>
+      <a name="all-schools"></a>
       <h2><%= pluralize(@programs.size, 'Dental School') %></h2>
       <% @programs.each do |p| %>
 
