--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,85 +1,11 @@
   <div class="row">
     <div class="overlay col-md-8 col-md-offset-2">
       <h2>Hi, <%= current_user.login %>! Let's help find the right dental program for you.</h2>
-      <%= form_tag('/search') do %>
-      <h3><%= label_tag(:q, "Enter one or more keywords (separated by comma)") %></h3>
-      <%= text_field_tag(:q, nil, class: "form-control") %>
-      <h3>Or use the filters below</h3>
-        <div>
-          <div>
-            <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">
-            <span class="glyphicon glyphicon-menu-down"></span> Type of Institution</a>
-            <div class="collapse" id="collapseFilterType">
-            <% $filter_1_values.each do |item| %>
-              <p class="filter-option">
-              <input value="1" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-              <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value %></label>
-              </p>
-              <% end %>
-            </div>
-          </div>
-          <div>
-            <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
-            <div class="collapse" id="collapseFilterResidence">
-              <% $filter_2_values.each do |item| %>
-                <p class="filter-option">
-                <input value="2" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-                <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
 
-                </p>
-              <% end %>
-            </div>
-          </div>
-          <div>
-            <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
-            <span class="glyphicon glyphicon-menu-down"></span> Predental programs</a>
-            <div class="collapse filter-options" id="collapseFilterPrograms">
-              <% $filter_3_values.each do |item| %>
-                <p class="filter-option">
-                <input value="3" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-                <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
-                </p>
-              <% end %>
-            </div>
-          </div>
-          <div>
-          <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
-            <div class="collapse" id="collapseFilterLocation">
-              <div style="height:150px; overflow-y:scroll;">
-                <% $filter_4_values.each do |item| %>
-                  <p class="filter-option">
-                  <input value="4" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-                  <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
-                  </p>
-                <% end %>
+      <%= render 'form' %>
 
-              </div>
-            <!--  <%= select_tag 'location', options_for_select($filter_4_values.collect{ |item| [item.field_value, 4, name: item.field_value] }), multiple: true, class: "input" %> -->
-             <p>&nbsp;</p>
-            </div>
-          </div>
-          <div>
-            <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
-            <div class="collapse" id="collapseFilterDegrees">
-              <% $filter_5_values.each do |item| %>
-              <p class="filter-option">
-
-              <input value="5" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-              <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
-              </p>
-              <% end %>
-            </div>
-
-          </div>
-          &nbsp;
-          <%= submit_tag("Filter Results", class: 'btn btn-primary btn-lg input-wide') %>
-          &nbsp;
-        </div>
-
-
-      <% end %>
-      <h2><%= pluralize(@programs.size, 'Dental School') %></h2>
-      <% @programs.each do |p| %>
+      <h2><%= pluralize($programs.size, 'Dental School') %></h2>
+      <% $programs.each do |p| %>
 
             <h3><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></h3>
 
