--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -3,72 +3,9 @@
     <p>&nbsp;</p>
       <a id="btn-search-filters" class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseAllFilters" aria-expanded="false" aria-controls="collapseAllFilters"><span class="glyphicon glyphicon-menu-down nodisplay"></span> Search Filters</a>
       <div class="collapse in" id="collapseAllFilters">
-        <%= form_tag('/search') do %>
-          <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">
-          <span class="glyphicon glyphicon-menu-down nodisplay"></span> Type of Institution</a>
 
-          <div class="search-page-filter collapse" id="collapseFilterType">
-            <% $filter_1_values.each do |item| %>
-              <p class="filter-option">
-              <input value="1" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-              <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
-              </p>
-            <% end %>
-          </div>
+        <%= render 'form' %>
 
-          <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down nodisplay"></span> Residential requirements</a>
-          <div class="search-page-filter collapse" id="collapseFilterResidence">
-            <% $filter_2_values.each do |item| %>
-              <p class="filter-option">
-              <input value="2" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-              <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
-              </p>
-            <% end %>
-          </div>
-
-          <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
-          <span class="glyphicon glyphicon-menu-down nodisplay"></span> Predental programs</a>
-          <div class="search-page-filter collapse" id="collapseFilterPrograms">
-            <% $filter_3_values.each do |item| %>
-              <p class="filter-option">
-              <input value="3" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-              <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
-              </p>
-            <% end %>
-          </div>
-
-          <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down nodisplay"></span> State/Territory/Province</a>
-          <div class="search-page-filter collapse" id="collapseFilterLocation">
-            <div style="height:150px; overflow-y:scroll;">
-              <% $filter_4_values.each do |item| %>
-                <p class="filter-option">
-                <input value="4" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-                <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
-                </p>
-              <% end %>
-              <p class="filter-option">
-              <input value="4" class="checkbox-input" type="checkbox" name="Delaware" id="Delaware" />
-              <label class="checkbox-label" for="Delaware">Delaware</label></p>
-              <p class="filter-option">
-              <input value="4" class="checkbox-input" type="checkbox" name="District of Columbia" id="District of Columbia" />
-              <label class="checkbox-label" for="District of Columbia">District of Columbia</label></p>
-
-            </div>
-           <p>&nbsp;</p>
-          </div>
-
-          <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down nodisplay"></span> Degree offered</a>
-          <div class="search-page-filter collapse" id="collapseFilterDegrees">
-            <% $filter_5_values.each do |item| %>
-            <p class="filter-option">
-            <input value="5" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
-              <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
-            </p>
-            <% end %>
-          </div>
-          <%= submit_tag("Filter", class: 'btn btn-primary btn-lg input-wide') %>
-
-        <% end %>
       </div>
     </div>
 
@@ -98,9 +35,9 @@
 
       <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
 
-      <h2>Search result: <%= pluralize(@programs.size, 'Dental School') %></h2>
+      <h2>Search result: <%= pluralize($programs.size, 'Dental School') %></h2>
 
-      <% @programs.each do |p| %>
+      <% $programs.each do |p| %>
         <h3><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></h3>
         <p><a class="btn btn-primary" href="information/<%=p.id%>">VIEW SCHOOL</a></p>
         <hr />
