--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -1,5 +1,5 @@
   <div class="search-page row overlay">
-    <div class="col-sm-5 col-md-4 col-lg-3">
+    <div class="overlay col-sm-5 col-md-4 col-lg-3">
     <p>&nbsp;</p>
       <a id="btn-search-filters" class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseAllFilters" aria-expanded="false" aria-controls="collapseAllFilters"><span class="glyphicon glyphicon-menu-down nodisplay"></span> Search Filters</a>
       <div class="collapse in" id="collapseAllFilters">
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div class="col-md-offset-1 col-md-7 col-lg-offset-1 col-lg-8 col-sm-7">
+    <div class="overlay col-md-offset-1 col-md-7 col-lg-offset-1 col-lg-8 col-sm-7">
       <br />
       <h4>Filtered by:</h4>
 
