--- a/app/views/programs/_form.html.erb
+++ b/app/views/programs/_form.html.erb
@@ -4,7 +4,7 @@
 <h3>Or use the filters below</h3>
   <div>
     <div>
-      <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">
+      <a class="btn btn-lg btn-primary btn-header collapsed" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">
       <span class="glyphicon glyphicon-menu-down"></span> Type of Institution</a>
       <div class="collapse" id="collapseFilterType">
       <% $filter_1_values.each do |item| %>
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div>
-      <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
+      <a class="btn btn-lg btn-primary btn-header collapsed" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
       <div class="collapse" id="collapseFilterResidence">
         <% $filter_2_values.each do |item| %>
           <p class="filter-option">
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div>
-      <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
+      <a class="btn btn-lg btn-primary btn-header collapsed" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
       <span class="glyphicon glyphicon-menu-down"></span> Predental programs</a>
       <div class="collapse filter-options" id="collapseFilterPrograms">
         <% $filter_3_values.each do |item| %>
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div>
-    <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
+    <a class="btn btn-lg btn-primary btn-header collapsed" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
       <div class="collapse" id="collapseFilterLocation">
         <div style="height:150px; overflow-y:scroll;">
           <% $filter_4_values.each do |item| %>
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div>
-      <a class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
+      <a class="btn btn-lg btn-primary btn-header collapsed" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
       <div class="collapse" id="collapseFilterDegrees">
         <% $filter_5_values.each do |item| %>
         <p class="filter-option">
