--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -1,7 +1,7 @@
   <div class="search-page row overlay">
     <div class="overlay col-sm-5 col-md-4 col-lg-3">
     <p>&nbsp;</p>
-      <a id="btn-search-filters" class="btn btn-lg btn-primary btn-header" role="button" data-toggle="collapse" href="#collapseAllFilters" aria-expanded="false" aria-controls="collapseAllFilters"><span class="glyphicon glyphicon-menu-down nodisplay"></span> Search Filters</a>
+      <a id="btn-search-filters" class="btn btn-lg btn-primary btn-header collapsed nodisplay" role="button" data-toggle="collapse" href="#collapseAllFilters" aria-expanded="false" aria-controls="collapseAllFilters"><span class="glyphicon glyphicon-menu-down nodisplay"></span> Search Filters</a>
       <div class="collapse in" id="collapseAllFilters">
 
         <%= render 'form' %>
