--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="information-page row">
   <div class="overlay col-md-10 col-md-offset-1">
-    <div class="information-page" id="<%= @program.id %>">
+    <div id="<%= @program.id %>">
       <h1 class="info-hed"><%= @program.program %></h1>
 
       <% this_section = "" %>
