--- a/app/views/programs/_show_programs.html.erb
+++ b/app/views/programs/_show_programs.html.erb
@@ -3,7 +3,7 @@
   <ul>
     <% program_card = $get_card_fields.select{ |item| item[:program_id] == p.id } %>
     <% program_card.each do |gcf| %>
-      <li><%= gcf.display_field_name %> : <%= gcf.field_value %></li>
+      <li><%= gcf.display_field_name %> <%= gcf.field_value %></li>
     <% end %>
   </ul>
   <p><a class="btn btn-primary" href="information/<%=p.id%>">VIEW SCHOOL</a></p>
