added style to school card

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -3,6 +3,7 @@ $font: Roboto, arial, Helvetica, sans-serif;
 $font-light: 300;
 $font-reg: 400;
 $font-bold: 500;
+$icon-font: FontAwesome;
 
 $primary-type: #000;
 $inverse-type: #ffffff;
