--- a/app/views/programs/_show_programs.html.erb
+++ b/app/views/programs/_show_programs.html.erb
@@ -1,9 +1,9 @@
 <% $programs.each do |p| %>
   <h3><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></h3>
-  <ul>
+  <ul class="card-summary">
     <% program_card = $get_card_fields.select{ |item| item[:program_id] == p.id } %>
     <% program_card.each do |gcf| %>
-      <li><%= gcf.display_field_name %> <%= gcf.field_value %></li>
+      <li><span class="info-subhed"><%= gcf.display_field_name %>:</span> <%= gcf.field_value %></li>
     <% end %>
   </ul>
   <p><a class="btn btn-primary" href="information/<%=p.id%>">VIEW SCHOOL</a></p>
