--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,13 +1,13 @@
-  <div class="row">
-    <div class="overlay col-md-8 col-md-offset-2">
-      <h2>Hi, <%= current_user.login %>! Let's help find the right dental program for you.</h2>
+<div class="row">
+  <div class="overlay col-md-8 col-md-offset-2">
+    <h2>Hi, <%= $display_username %>! (Roles: <%= $user_roles %>) Let's help find the right dental program for you.</h2>
 
-      <%= render 'form' %>
+    <%= render 'form' %>
 
-      <a name="all-schools"></a>
-      <h2><%= pluralize($programs.size, 'Dental School') %></h2>
+    <a name="all-schools"></a>
+    <h2><%= pluralize($programs.size, 'Dental School') %></h2>
 
-      <%= render 'show_programs' %>
+    <%= render 'show_programs' %>
 
-    </div>
   </div>
+</div>
