--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,11 @@
       <div data-role="toolbar" data-position="fixed" class="navbar-header">
         <div class="logo">
         <a class="logo-link" href="/index"><%= image_tag("adealogo.png", class: "logo-img") %>
-        <span class="logo-text">2017-2018 ADEA Official Guide to Dental Schools</span></a>
+        <p class="logo-text">2017-2018 ADEA Official Guide to Dental Schools</p></a>
         </div>
       </div>
       <div class="header-nav">
-        <% if $display_username %>
+        <% if current_user %>
             <button class="btn navbar-btn btn-inverse ">
               <a href="/index"><span class="glyphicon glyphicon-search"></span></a>
             </button>
