fixed nav btns hover

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -257,6 +257,11 @@ a:active, a:hover {
   border-color: $primary-color;
 }
 
+.btn-inverse:hover {
+  color: $inverse-type;
+  background-color: $accent-color;
+}
+
 .btn.disabled {
   opacity: 1;
 }
