Application.html.erb change

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="header-nav">
-        <% if current_user %>
+        <% if $display_username %>
             <button class="btn navbar-btn btn-inverse ">
               <a href="/index"><span class="glyphicon glyphicon-search"></span></a>
             </button>
