--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="overlay col-md-8 col-md-offset-2">
-    <h2>Hi, <%= $display_username %>! (Roles: <%= $user_roles %>) Let's help find the right dental program for you.</h2>
+    <h2>Hi, <%= @display_username %>! (Roles: <%= @user_roles %>) Let's help find the right dental program for you.</h2>
 
     <%= render 'form' %>
 
     <a name="all-schools"></a>
-    <h2><%= pluralize($programs.size, 'Dental School') %></h2>
+    <h2><%= pluralize(@programs.size, 'Dental School') %></h2>
 
     <%= render 'show_programs' %>
 
