--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -15,5 +15,5 @@ $primary-color: #219ab4;
 $secondary-color: #005d83;
 $accent-color: #f59c36;
 
-$sign-in-bg: url('/assets/dental-web3.jpg');
+$sign-in-bg: '/assets/hermanostrow.jpg';
 
