--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,5 +1,10 @@
   <div class="row">
     <div class="overlay col-md-8 col-md-offset-2">
+    	<% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>">
+          <%= value %>
+        </div>
+      <% end %>
       <h2>Hi, <%= current_user.login %>! Let's help find the right dental program for you.</h2>
 
       <%= render 'form' %>
