--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,11 @@ h3 {
 	margin-top: 1.5em;
 }
 
+h4 {
+	margin-top: 2em;
+  text-transform: uppercase;
+}
+
 label {
   font-weight: $font-light;
 }
@@ -483,6 +488,7 @@ table th:first-child {
     margin-top: 20px;
     pointer-events:none;
     text-transform: uppercase;
+    font-size: 20px;
   }
 
 
