--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="overlay col-md-8 col-md-offset-2">
-    <h2>Hi, <%= @display_username %>!<br/>Let's help find the right dental program for you.</h2>
+    <h2>Welcome, <%= @display_username %></h2>
 
     <%= render 'form' %>
 
